# INT8-Flash-Attention-FMHA-Quantization

./: CMakeLists.txt  README.md  fmha_i8_quant_deviation.py  fmha_i8_quant_error_seqlen.py  test_fmha_i8.cpp
inc/: cpuGEMM.hpp  cpuSoftmax.hpp  fmha_i8.cuh  fmha_i8.h  fmha_param_i8.h  utils.hpp
src/: fmha_i8.cu
